import "gamedbd/auction_order.proto";

package gamedbRpc;

option cc_generic_services = true;

message AuctionLoadRequest
{
}

message AuctionLoadResponse
{
	enum ErrorCode
	{
		NO_ERROR = 0;
		DB_BUSY = 1;
	}

	required ErrorCode error = 1 [default = NO_ERROR];
	repeated AuctionOrder auction_list = 2;
}

service AuctionLoadService
{
	rpc HandleAuctionLoad (AuctionLoadRequest) returns (AuctionLoadResponse);
}
